--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -11,10 +11,10 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches-ignore: [master, main]
+    branches-ignore: [ master, main ]
     # Remove the line above to run when pushing to master
   pull_request:
-    branches: [master, main]
+    branches: [ master, main ]
 
 ###############
 # Set the Job #
@@ -44,8 +44,9 @@ jobs:
       # Run Linter against code base #
       ################################
       - name: Lint Code Base
-        uses: github/super-linter@v4
+        uses: github/super-linter/slim@v4
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DISABLE_ERROR: true
